@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-18T08:06:54Z",
+  "timestamp" : "2022-08-22T16:01:23Z",
   "count_outdated" : 42,
   "uniques_outdated" : 36,
-  "count" : 51,
-  "uniques" : 43,
+  "count" : 53,
+  "uniques" : 44,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
