@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 7,
+  "count": 11,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
